Build with babel, add csstype remove redux

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
+    "noEmit": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "esnext",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
   }
 }
