--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/react-redux": "^7.1.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "css-modules-typescript-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
@@ -30,7 +33,6 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "csstype": "^2.6.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
