--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@types/braintree-web-drop-in": "^1.18.0",
+    "braintree-web-drop-in": "^1.20.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
