--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.2.0",
     "css-modules-typescript-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
