--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "braintree": "^2.21.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.1",
     "@types/braintree": "^2.20.0",
     "@types/express": "^4.17.1",
     "@types/node": "^12.12.0",
