--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
     "@types/braintree-web-drop-in": "^1.18.0",
     "braintree-web-drop-in": "^1.20.4",
     "react": "^16.11.0",
