--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/js-cookie": "^2.2.4",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
@@ -37,6 +38,7 @@
     "@material-ui/icons": "^4.5.1",
     "@types/braintree-web-drop-in": "^1.18.0",
     "braintree-web-drop-in": "^1.20.4",
+    "js-cookie": "^2.2.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
