--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "js-cookie": "^2.2.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-intl": "^3.4.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   }
