--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
@@ -43,6 +44,7 @@
     "react-dom": "^16.11.0",
     "react-intl": "^3.4.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4"
   }
 }
