--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "clsx": "^1.0.4",
     "css-loader": "^3.2.0",
     "css-modules-typescript-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
