--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@types/braintree-web-drop-in": "^1.18.0",
-    "@types/js-cookie": "^2.2.4",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
@@ -40,12 +39,14 @@
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "braintree-web-drop-in": "^1.20.4",
-    "js-cookie": "^2.2.1",
+    "cookies-js": "^1.2.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-intl": "^3.4.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0"
   }
 }
