--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/main.ts"
+    "start": "ts-node ./src/main.ts",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +15,16 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.35",
     "@types/body-parser": "^1.17.1",
     "@types/braintree": "^2.20.0",
     "@types/express": "^4.17.1",
     "@types/node": "^12.12.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
