--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,14 @@
     "clsx": "^1.0.4",
     "css-loader": "^3.2.0",
     "css-modules-typescript-loader": "^3.0.1",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
+    "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
