--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "braintree-web-drop-in": "^1.20.4",
