--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack",
+    "build": "rm dist/*;webpack",
     "start": "webpack-dev-server"
   },
   "author": "",
