Add fetch polyfill for IE11

--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "clsx": "^1.0.4",
     "css-loader": "^3.2.0",
     "css-modules-typescript-loader": "^3.0.1",
+    "exports-loader": "^0.7.0",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
+    "imports-loader": "^0.8.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
@@ -44,6 +46,7 @@
     "@material-ui/icons": "^4.5.1",
     "braintree-web-drop-in": "^1.20.4",
     "cookies-js": "^1.2.3",
+    "fetch-ie8": "^1.5.0",
     "logrocket": "^1.0.5",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
