--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "build": "rm dist/*;webpack --config webpack.beta.config.js",
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
     "start": "webpack-dev-server",
+    "start:beta": "webpack-dev-server --config webpack.beta.config.js",
     "start:internal": "webpack-dev-server --config webpack.internal.config.js"
   },
   "author": "",
@@ -49,8 +50,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "braintree-web-drop-in": "^1.20.4",
     "cookies-js": "^1.2.3",
     "fetch-ie8": "^1.5.0",
