--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "build": "rm dist/*;webpack --config webpack.beta.config.js",
+    "build:test": "rm dist/*;webpack --config webpack.test.config.js",
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
     "start": "webpack-dev-server",
     "start:beta": "webpack-dev-server --config webpack.beta.config.js",
