--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "rm dist/*;webpack --config webpack.beta.config.js",
+    "build:beta": "rm dist/*;webpack --config webpack.beta.config.js",
     "build:test": "rm dist/*;webpack --config webpack.test.config.js",
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
+    "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
+    "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
+    "deploy:beta": "npm run clean && npm run build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site",
+    "deploy:prod": "npm run clean && npm run build:prod && aws s3 sync ./dist s3://badanamu-pass-site",
     "start": "webpack-dev-server",
     "start:beta": "webpack-dev-server --config webpack.beta.config.js",
-    "start:internal": "webpack-dev-server --config webpack.internal.config.js"
+    "start:internal": "webpack-dev-server --config webpack.internal.config.js",
+    "clean": "rm -rf ./dist/*"
   },
   "author": "",
   "license": "ISC",
