--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,8 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-transform-object-assign": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.6.3",
@@ -58,6 +58,8 @@
     "@babel/polyfill": "^7.7.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@sentry/react": "^5.27.1",
+    "@sentry/tracing": "^5.27.1",
     "braintree-web-drop-in": "^1.20.4",
     "cookies-js": "^1.2.3",
     "fetch-ie8": "^1.5.0",
