fix: redirect to login for verify token
fix: script command to yarn

fix: set verification failure msg

fix: show msg and login button when link is invalid

fix: text for verify account

fix: change target link when token verification fails

--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
     "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
     "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
-    "deploy:beta": "npm run clean && npm run build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
-    "deploy:prod": "npm run clean && npm run build:prod && aws s3 sync ./dist s3://badanamu-pass-site && aws cloudfront create-invalidation --distribution-id E1HQOLXMD8JFIN --paths '/*'",
+    "deploy:beta": "yarn clean && yarn build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
+    "deploy:prod": "yarn clean && yarn build:prod && aws s3 sync ./dist s3://badanamu-pass-site && aws cloudfront create-invalidation --distribution-id E1HQOLXMD8JFIN --paths '/*'",
     "start": "webpack-dev-server",
     "start:beta": "webpack-dev-server --config webpack.beta.config.js",
     "start:internal": "webpack-dev-server --config webpack.internal.config.js",
