--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "imports-loader": "^0.8.0",
+    "prettier": "^2.2.1",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
