--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/webpack-env": "^1.16.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
@@ -46,7 +47,7 @@
     "imports-loader": "^0.8.0",
     "prettier": "^2.2.1",
     "style-loader": "^1.0.0",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^8.0.12",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
     "url-loader": "^2.3.0",
@@ -59,13 +60,14 @@
     "@babel/polyfill": "^7.7.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@paypal/react-paypal-js": "^3.0.3",
+    "@reduxjs/toolkit": "^1.5.0",
     "@sentry/react": "^5.27.1",
     "@sentry/tracing": "^5.27.1",
     "braintree-web-drop-in": "^1.20.4",
     "cookies-js": "^1.2.3",
     "fetch-ie8": "^1.5.0",
     "interpolate-html-plugin": "^3.0.0",
-    "logrocket": "^1.0.5",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
