--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "noEmit": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "esnext",
+    "noImplicitAny": false,
+    "strict": false,
+    "module": "es6",
+    "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "strictNullChecks": true,
-    "esModuleInterop": true
+    "sourceMap": true,
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true
   }
 }
