--- a/client/package.json
+++ b/client/package.json
@@ -64,10 +64,12 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@sentry/react": "^5.27.1",
     "@sentry/tracing": "^5.27.1",
+    "@types/lodash": "^4.14.165",
     "braintree-web-drop-in": "^1.20.4",
     "cookies-js": "^1.2.3",
     "fetch-ie8": "^1.5.0",
     "interpolate-html-plugin": "^3.0.0",
+    "lodash": "^4.17.20",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
