--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "build:beta": "rm dist/*;webpack --config webpack.beta.config.js",
     "build:test": "rm dist/*;webpack --config webpack.test.config.js",
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
+    "build:prod-uk": "rm dist/*;webpack --config webpack.prod.uk.config.js",
+    "build:prod-vn": "rm dist/*;webpack --config webpack.prod.vn.config.js",
+    "build:prod-id": "rm dist/*;webpack --config webpack.prod.id.config.js",
     "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
     "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
     "deploy:beta": "yarn clean && yarn build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
@@ -52,8 +55,7 @@
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
