--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "logrocket": "^1.0.5",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.11.0",
     "react-intl": "^3.4.0",
     "react-redux": "^7.1.3",
