--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "build:prod-uk": "rm dist/*;webpack --config webpack.prod.uk.config.js",
     "build:prod-vn": "rm dist/*;webpack --config webpack.prod.vn.config.js",
     "build:prod-id": "rm dist/*;webpack --config webpack.prod.id.config.js",
+    "build:prod-in": "rm dist/*;webpack --config webpack.prod.in.config.js",
     "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
     "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
     "deploy:beta": "yarn clean && yarn build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
