--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,8 @@
     "@babel/preset-typescript": "^7.6.0",
     "@babel/runtime": "^7.7.4",
     "@types/braintree-web-drop-in": "^1.18.0",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "babel-core": "^6.26.3",
@@ -52,7 +52,7 @@
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
+    "typescript": "^4.3.4",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
@@ -60,7 +60,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@sentry/react": "^5.27.1",
     "@sentry/tracing": "^5.27.1",
@@ -70,10 +70,10 @@
     "interpolate-html-plugin": "^3.0.0",
     "logrocket": "^1.0.5",
     "query-string": "^6.9.0",
-    "react": "^16.11.0",
+    "react": "^17.0.2",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.11.0",
-    "react-intl": "^3.4.0",
+    "react-dom": "^17.0.2",
+    "react-intl": "5.20",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
