--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "scripts": {
     "build": "./build.sh",
-    "build:beta": "rm dist/*;webpack --config webpack.beta.config.js",
+    "build:dev": "rm dist/*;webpack --config webpack.beta.config.js",
     "build:prod": "rm dist/*;webpack --config webpack.prod.config.js",
     "start": "webpack-dev-server",
-    "start:beta": "webpack-dev-server --config webpack.beta.config.js",
-    "start:internal": "webpack-dev-server --config webpack.internal.config.js",
+    "start:dev": "webpack-dev-server --config webpack.beta.config.js",
+    "start:prod": "webpack-dev-server --config webpack.prod.config.js",
     "clean": "rm -rf ./dist/*"
   },
   "author": "",
