--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "build:prod-id": "rm dist/*;webpack --config webpack.prod.id.config.js",
     "build:prod-in": "rm dist/*;webpack --config webpack.prod.in.config.js",
     "build:prod-rk": "rm dist/*;BRAND=RUMAH_KISAH webpack --config webpack.prod.rk.config.js",
-    "build:prod-cn": "rm dist/*;AUTH_REDIRECT_LINK=https://login.kidsloop.cn/ webpack --config webpack.prod.config.js",
-    "build:kl-alpha": "rm dist/*;AUTH_REDIRECT_LINK=https://auth.alpha.kidsloop.net/ webpack --config webpack.prod.config.js",
+    "build:prod-cn": "rm dist/*;AUTH_RETURN_LINK=https://login.kidsloop.cn/ webpack --config webpack.prod.config.js",
+    "build:kl-alpha": "rm dist/*;AUTH_RETURN_LINK=https://auth.alpha.kidsloop.net/ webpack --config webpack.prod.config.js",
     "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
     "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
     "deploy:beta": "yarn clean && yarn build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
