add configuration for new envs

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,10 @@
     "build:beta-rk": "rm dist/*;BRAND=RUMAH_KISAH AUTH_RETURN_LINK=https://auth.beta.rumahkisah.net/ webpack --config webpack.prod.rk.config.js",
     "build:prod-cn": "rm dist/*;AUTH_RETURN_LINK=https://login.kidsloop.cn/ webpack --config webpack.prod.config.js",
     "build:kl-alpha": "rm dist/*;AUTH_RETURN_LINK=https://auth.alpha.kidsloop.net/ webpack --config webpack.prod.config.js",
+    "build:global-onboarding": "rm dist/*;AUTH_RETURN_LINK=https://auth.onboarding.kidsloop.live/ webpack --config webpack.prod.config.js",
+    "build:sre-beta": "rm dist/*;AUTH_RETURN_LINK=https://auth.beta.klpsre.com/ webpack --config webpack.beta.config.js",
+    "build:sre-alpha": "rm dist/*;AUTH_RETURN_LINK=https://auth.alpha.klpsre.com/ webpack --config webpack.beta.config.js",
+    "build:scoe-poc": "rm dist/*;AUTH_RETURN_LINK=https://auth.poc.klscoe.com/ webpack --config webpack.beta.config.js",
     "backup:beta": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_beta'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-beta-pass-site backup/$tempdir",
     "backup:prod": "tempdir=`date '+%Y-%m-%d_%H:%M:%S_prod'` && mkdir -p backup/$tempdir && aws s3 sync s3://badanamu-pass-site backup//$tempdir",
     "deploy:beta": "yarn clean && yarn build:beta && aws s3 sync ./dist s3://badanamu-beta-pass-site && aws cloudfront create-invalidation --distribution-id EH0IZ1XK4JAWB --paths '/*'",
