--- a/client/package.json
+++ b/client/package.json
@@ -89,6 +89,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "5.20",
     "react-redux": "^7.1.3",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
